Add header web section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
   </head>
   <body>
     <nav>
-        <h1>Header Logo</h1>
-        <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+      <h1>Header Logo</h1>
+      <ul>
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
+      </ul>
     </nav>
+    <div>
+      <div>
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's a smaller font an the color is lower contrast
+        </p>
+        <button>Sign up</button>
+      </div>
+      <div>Image Placeholder</div>
+    </div>
   </body>
 </html>
