Change div to header element

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#">header link three</a></li>
       </ul>
     </nav>
-    <div>
+    <header>
       <div>
         <h1>This website is awesome</h1>
         <p>
@@ -25,6 +25,6 @@
         <button>Sign up</button>
       </div>
       <div>Image Placeholder</div>
-    </div>
+    </header>
   </body>
 </html>
