Add class names to elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>
+    <nav class="nav-bar">
       <h1>Header Logo</h1>
       <ul>
         <li><a href="#">header link one</a></li>
@@ -15,7 +15,7 @@
         <li><a href="#">header link three</a></li>
       </ul>
     </nav>
-    <header>
+    <header class="header">
       <div>
         <h1>This website is awesome</h1>
         <p>
