Add skeleton for information section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,36 @@
       </div>
       <div>Image Placeholder</div>
     </header>
+    <main>
+      <section class="info-section">
+        <h1>Some random information</h1>
+        <div class="flex-container">
+          <div class="info">
+            <div class="img-container">
+              <div>image goes here</div>
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="info">
+            <div class="img-container">
+              <div>image goes here</div>
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="info">
+            <div class="img-container">
+              <div>image goes here</div>
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="info">
+            <div class="img-container">
+              <div>image goes here</div>
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
