Add skeleton for action section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
           <p>-Thor, God of Thunder</p>
         </div>
       </section>
+      <section class="action-section">
+        <div class="action-container">
+            <div>
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
