Add skeleton for footer

--- a/index.html
+++ b/index.html
@@ -77,4 +77,9 @@
       </section>
     </main>
   </body>
+  <footer>
+      <div class="footer-container">
+          <h3>Copyright &#169 The Odin Project 2021</h3>
+      </div>
+  </footer>
 </html>
