--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
         <button>Sign up</button>
       </div>
-      <div>Image Placeholder</div>
+      <div class="temp-image">Image Placeholder</div>
     </header>
     <main>
       <section class="info-section">
