--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>This website is awesome</h1>
         <p>
           This website has some subtext that goes here under the main title.
-          It's a smaller font an the color is lower contrast
+          It's a smaller font and the color is lower contrast
         </p>
         <button>Sign up</button>
       </div>
