--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             it's just filling up space, or maybe people will actually read it.
             Who knows? All I know is that it looks nice.
           </p>
-          <p>-Thor, God of Thunder</p>
+          <p class="author">-Thor, God of Thunder</p>
         </div>
       </section>
       <section class="action-section">
