Update logo with svg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <h1>Header Logo</h1>
+      <img src="./images/mug.svg" alt="mug" width="50px">
       <ul>
         <li><a href="#">header link one</a></li>
         <li><a href="#">header link two</a></li>
