Update nav links

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav class="nav-bar">
       <img src="./images/mug.svg" alt="mug" width="50px">
       <ul>
-        <li><a href="#">header link one</a></li>
-        <li><a href="#">header link two</a></li>
-        <li><a href="#">header link three</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Contact us!</a></li>
       </ul>
     </nav>
     <header class="header">
