Update header section

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     </nav>
     <header class="header">
       <div class="header-text">
-        <h1>This website is awesome</h1>
+        <h1>Morning Kick</h1>
         <p>
-          This website has some subtext that goes here under the main title.
-          It's a smaller font and the color is lower contrast
+          Achieve your mornings with the kick you need from our fragrant cold brew
         </p>
         <button>Sign up</button>
       </div>
-      <div class="temp-image">Image Placeholder</div>
+      <img src="./images/coffee1.jpg" alt="coffee mug" width="280px">
     </header>
     <main>
       <section class="info-section">
