Update information section

--- a/index.html
+++ b/index.html
@@ -28,25 +28,22 @@
     </header>
     <main>
       <section class="info-section">
-        <h1>Some random information</h1>
+        <h1>Our Method !</h1>
         <div class="flex-container">
           <div class="info">
-            <div class="img-container">
-              <div>image goes here</div>
+            <div class="img-container coffee-1">
             </div>
-            <p>this is some subtext under an illustration or image</p>
+            <p>Only 100% fine dark chocolate is used, pure natural sweetness</p>
           </div>
           <div class="info">
-            <div class="img-container">
-              <div>image goes here</div>
+            <div class="img-container coffee-2">
             </div>
-            <p>this is some subtext under an illustration or image</p>
+            <p>Lactose free milk - You shouldn't fear what you should be loving</p>
           </div>
           <div class="info">
-            <div class="img-container">
-              <div>image goes here</div>
+            <div class="img-container coffee-3">
             </div>
-            <p>this is some subtext under an illustration or image</p>
+            <p>Finish up with Morning kick's original blend, the heart of our coffee</p>
           </div>
         </div>
       </section>
