Update action section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <section class="action-section">
         <div class="action-container">
             <div>
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h3>Interested? Become the early bird!</h3>
+                <p>Sign up for our product when it's out by clicking that button right over there!</p>
             </div>
             <button>Sign up</button>
         </div>
