--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       <section class="testimony-section">
         <div class="testimony">
           <p class="quote">
-            This is an inspiring quote, or a testimonial from a customer. Maybe
-            it's just filling up space, or maybe people will actually read it.
-            Who knows? All I know is that it looks nice.
+            The smell alone when I received a sample was enough to tell me that I was gonna love it.
+            It wasn't completely dark but rather the sweetness I needed to wake up for the morning.
+            I am extremely pleased with the quality and will definitely come back for more!
           </p>
-          <p class="author">-Thor, God of Thunder</p>
+          <p class="author">-Felix Isac</p>
         </div>
       </section>
       <section class="action-section">
