Add testimony image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
             It wasn't completely dark but rather the sweetness I needed to wake up for the morning.
             I am extremely pleased with the quality and will definitely come back for more!
           </p>
-          <p class="author">-Felix Isac</p>
+          <div class="author-container">
+            <p class="author">-Felix Isac</p>
+            <img src="./images/persona1.jpg" width="100px" >
+          </div>
         </div>
       </section>
       <section class="action-section">
