--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="info">
             <div class="img-container coffee-3">
             </div>
-            <p>Finish up with Morning kick's original blend, the heart of our coffee</p>
+            <p>Finish up with Morning Kick's original blend, the heart of our coffee</p>
           </div>
         </div>
       </section>
